--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <nav>
           <div>
             <!--logo Text container-->
-            <h1 class="font-bold uppercase">
+            <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
               <a href="#">Food App</a>
             </h1>
@@ -43,7 +43,7 @@
       </div>
       <!--end of navigation container-->
 
-      <main>
+      <main class="px-16 py-6">
         <div>
           <!--Auth Buttons-->
           <a href="">Log In</a>
@@ -56,12 +56,14 @@
         </header>
 
         <div>
-          <h4 class="font-bold">Latest Recipes</h4>
+          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
+            Latest Recipes
+          </h4>
 
-          <div>
+          <div class="mt-8">
             <!--cards go here-->
             <div>
-              <img src="" alt="" />
+              <img src="./img/stew.jpg" alt="" />
               <div>
                 <span>5 Bean Chilli Stew</span>
                 <span>Recipe by Blemo</span>
@@ -69,8 +71,10 @@
             </div>
           </div>
 
-          <h4 class="font-bold">Most Popular</h4>
-          <div>
+          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
+            Most Popular
+          </h4>
+          <div class="mt-8">
             <!--cards go here-->
           </div>
 
