--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="description" content="A Foof app that disrupts the normal food delivery model" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food App</title>
     <link rel="stylesheet" href="../dist/output.css" />
