--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <!--nav link section-->
             <li class="text-gray-700 font-bold">
               <a href="#">
+                <!--Individual links-->
                 <span class="">Home</span>
               </a>
             </li>
