--- a/public/index.html
+++ b/public/index.html
@@ -82,6 +82,7 @@
 
           <div>
             <div>Load More</div>
+                <div>Load More</div>
           </div>
         </div>
       </main>
