--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@
           <div>
             <div>Load More</div>
                 <div>Load More</div>
+                    <div>Load More</div>
           </div>
         </div>
       </main>
