--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,7 @@
             <div>Load More</div>
                 <div>Load More</div>
                     <div>Load More</div>
+                        <div>Load More</div>
           </div>
         </div>
       </main>
