--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,13 @@
           </h4>
           <div class="mt-8">
             <!--cards go here-->
+             <div>
+              <img src="./img/stew.jpg" alt="" />
+              <div>
+                <span>5 Bean Chilli Stew</span>
+                <span>Recipe by Blemo</span>
+              </div>
+            </div>
           </div>
 
           <div>
