--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
             <li>
               <a href="#">
                 <span>Contact</span>
+                 <span>Contact</span>
               </a>
             </li>
           </ul>
