worked on the font family

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Food App</title>
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
-  <body class="text-gray-600">
+  <body class="text-gray-600 font-body">
     <div>
       <!--Page container-->
       <div>
