added new updates

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-     <meta name="description" content="A Foof app that disrupts the normal food delivery model" />
+    <meta
+      name="description"
+      content="A Foof app that disrupts the normal food delivery model"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food App</title>
     <link rel="stylesheet" href="../dist/output.css" />
@@ -45,10 +48,10 @@
       <!--end of navigation container-->
 
       <main class="px-16 py-6">
-        <div>
+        <div class="flex justify-end">
           <!--Auth Buttons-->
           <a href="">Log In</a>
-          <a href="">Sign Up</a>
+          <a href="ml-2">Sign Up</a>
         </div>
 
         <header>
@@ -79,8 +82,8 @@
             <!--cards go here-->
           </div>
 
-          <div>
-            <div>Load More</div>
+          <div class="border-gray-500 flex justify-center">
+            <div class="bg-secondary-100 text-secondary-200">Load More</div>
           </div>
         </div>
       </main>
