added new updates

--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
               <div>
                 <span>5 Bean Chilli Stew</span>
                 <span>Recipe by Blemo</span>
-                 <span>Recipe by Blemo</span>
+                 <span>Recipe by Blemo</span> <span>Recipe by Blemo</span>
               </div>
             </div>
           </div>
