--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
           <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
             Most Popular
              Most Popular
-             
+                   Most Popular
       Most Popular
           </h4>
           <div class="mt-8">
