extended the colors in tailwind config file and rebuilt tailwind

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
       <main class="px-16 py-6">
         <div class="flex justify-end">
           <!--Auth Buttons-->
-          <a href="">Log In</a>
-          <a href="ml-2">Sign Up</a>
+          <a href="" class="text-primary">Log In</a>
+          <a href="ml-2" class="text-primary">Sign Up</a>
         </div>
 
         <header>
@@ -82,7 +82,7 @@
             <!--cards go here-->
           </div>
 
-          <div class="border-gray-500 flex justify-center">
+          <div class="flex justify-center">
             <div class="bg-secondary-100 text-secondary-200">Load More</div>
           </div>
         </div>
