made the headers responsive on different screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
-              <a href="#">Food App</a>
+              <a href="#" >Food App</a>
             </h1>
           </div>
 
@@ -48,7 +48,7 @@
       <!--end of navigation container-->
 
       <main class="px-16 py-6">
-        <div class="flex justify-end">
+        <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
           <a href="" class="text-primary">Log In</a>
           <a href="ml-2" class="text-primary">Sign Up</a>
