--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       </div>
       <!--end of navigation container-->
 
-      <main class="px-16 py-6">
+      <main class="px-16 py-6 bg-gray-100">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
           <a href="" class="text-primary">Log In</a>
@@ -66,11 +66,11 @@
 
           <div class="mt-8">
             <!--cards go here-->
-            <div>
-              <img src="./img/stew.jpg" alt="" />
-              <div>
-                <span>5 Bean Chilli Stew</span>
-                <span>Recipe by Blemo</span>
+            <div class="bg-white rounded overflow-hidden shadow-md">
+              <img src="./img/stew.jpg" alt="" class="w-full h-32 sm:h-48 object-cover" />
+              <div class="m-4">
+                <span class="font-bold ">5 Bean Chilli Stew</span>
+                <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
             </div>
           </div>
