--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
-              <a href="#" >Food App</a>
+              <a href="#">Food App</a>
             </h1>
           </div>
 
@@ -66,11 +66,22 @@
 
           <div class="mt-8">
             <!--cards go here-->
-            <div class="bg-white rounded overflow-hidden shadow-md">
-              <img src="./img/stew.jpg" alt="" class="w-full h-32 sm:h-48 object-cover" />
+            <div class="bg-white rounded overflow-hidden shadow-md relative">
+              <img
+                src="./img/stew.jpg"
+                alt=""
+                class="w-full h-32 sm:h-48 object-cover"
+              />
               <div class="m-4">
-                <span class="font-bold ">5 Bean Chilli Stew</span>
+                <span class="font-bold">5 Bean Chilli Stew</span>
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
+              </div>
+              <div>
+                <span
+                  class="bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2"
+                >
+                  25 mins
+                </span>
               </div>
             </div>
           </div>
