--- a/public/index.html
+++ b/public/index.html
@@ -66,10 +66,10 @@
 
           <div class="mt-8">
             <!--cards go here-->
-            <div class="bg-white rounded overflow-hidden shadow-md relative">
+            <div class="card">
               <img
                 src="./img/stew.jpg"
-                alt=""
+                alt="stew"
                 class="w-full h-32 sm:h-48 object-cover"
               />
               <div class="m-4">
@@ -78,7 +78,45 @@
               </div>
               <div>
                 <span
-                  class="bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2"
+                  class="badge"
+                >
+                  25 mins
+                </span>
+              </div>
+            </div>
+
+               <div class="card">
+              <img
+                src="./img/noodles.jpg"
+                alt="noodles"
+                class="w-full h-32 sm:h-48 object-cover"
+              />
+              <div class="m-4">
+                <span class="font-bold">5Veg Noodles</span>
+                <span class="block text-sm text-gray-500">Recipe by Blemo</span>
+              </div>
+              <div>
+                <span
+                  class="badge"
+                >
+                  25 mins
+                </span>
+              </div>
+            </div>
+
+               <div class="card">
+              <img
+                src="./img/curry.jpg"
+                alt="curry"
+                class="w-full h-32 sm:h-48 object-cover"
+              />
+              <div class="m-4">
+                <span class="font-bold">Tofu Curry</span>
+                <span class="block text-sm text-gray-500">Recipe by Blemo</span>
+              </div>
+              <div>
+                <span
+                  class="badge"
                 >
                   25 mins
                 </span>
