--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
             Latest Recipes
           </h4>
 
-          <div class="mt-8">
+          <div class="mt-8 grid lg:grid-cols-3 gap-10">
             <!--cards go here-->
             <div class="card">
               <img
