--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" href="../dist/output.css" />
   </head>
   <body class="text-gray-600 font-body">
-    <div>
+    <div class="grid md:grid-cols-3">
       <!--Page container-->
-      <div>
+      <div class="md:col-span-1">
         <!--navigation container-->
         <nav>
           <div>
@@ -47,7 +47,7 @@
       </div>
       <!--end of navigation container-->
 
-      <main class="px-16 py-6 bg-gray-100">
+      <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
           <a href="" class="text-primary">Log In</a>
@@ -77,15 +77,11 @@
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
               <div>
-                <span
-                  class="badge"
-                >
-                  25 mins
-                </span>
+                <span class="badge"> 25 mins </span>
               </div>
             </div>
 
-               <div class="card">
+            <div class="card">
               <img
                 src="./img/noodles.jpg"
                 alt="noodles"
@@ -96,15 +92,11 @@
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
               <div>
-                <span
-                  class="badge"
-                >
-                  25 mins
-                </span>
+                <span class="badge"> 25 mins </span>
               </div>
             </div>
 
-               <div class="card">
+            <div class="card">
               <img
                 src="./img/curry.jpg"
                 alt="curry"
@@ -115,11 +107,7 @@
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
               <div>
-                <span
-                  class="badge"
-                >
-                  25 mins
-                </span>
+                <span class="badge"> 25 mins </span>
               </div>
             </div>
           </div>
