create a custom buttonclass/component

--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
       <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
-          <a href="" class="text-primary">Log In</a>
-          <a href="ml-2" class="text-primary">Sign Up</a>
+          <a href="#" class="btn text-primary border-primary md:border-2">Log In</a>
+          <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign Up</a>
         </div>
 
         <header>
@@ -120,7 +120,7 @@
           </div>
 
           <div class="flex justify-center">
-            <div class="bg-secondary-100 text-secondary-200">Load More</div>
+            <div class="bg-secondary-100 text-secondary-200 btn">Load More</div>
           </div>
         </div>
       </main>
