--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,58 @@
             <li class="text-gray-700 font-bold">
               <a href="#">
                 <span class="">Home</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                  />
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <span>About</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M8.228 9c.549-1.165 2.03-2 3.772-2 2.21 0 4 1.343 4 3 0 1.4-1.278 2.575-3.006 2.907-.542.104-.994.54-.994 1.093m0 3h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <span>Contact</span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"
+                  />
+                </svg>
               </a>
             </li>
           </ul>
@@ -50,8 +92,12 @@
       <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
-          <a href="#" class="btn text-primary border-primary md:border-2">Log In</a>
-          <a href="#" class="btn text-primary ml-2 border-primary md:border-2">Sign Up</a>
+          <a href="#" class="btn text-primary border-primary md:border-2"
+            >Log In</a
+          >
+          <a href="#" class="btn text-primary ml-2 border-primary md:border-2"
+            >Sign Up</a
+          >
         </div>
 
         <header>
@@ -76,8 +122,22 @@
                 <span class="font-bold">5 Bean Chilli Stew</span>
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
-              <div>
-                <span class="badge"> 25 mins </span>
+              <div class="badge">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-5 inline-block"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+                <span> 25 mins </span>
               </div>
             </div>
 
@@ -91,8 +151,22 @@
                 <span class="font-bold">5Veg Noodles</span>
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
-              <div>
-                <span class="badge"> 25 mins </span>
+              <div class="badge">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-5 inline-block"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+                <span> 25 mins </span>
               </div>
             </div>
 
@@ -106,8 +180,22 @@
                 <span class="font-bold">Tofu Curry</span>
                 <span class="block text-sm text-gray-500">Recipe by Blemo</span>
               </div>
-              <div>
-                <span class="badge"> 25 mins </span>
+              <div class="badge">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-5 inline-block"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"
+                  />
+                </svg>
+                <span> 25 mins </span>
               </div>
             </div>
           </div>
