--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
-              <a href="#">Food App</a>
+              <a href="#" class="hover:text-gray-700">Food App</a>
             </h1>
           </div>
 
@@ -92,10 +92,10 @@
       <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
-          <a href="#" class="btn text-primary border-primary md:border-2"
+          <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white"
             >Log In</a
           >
-          <a href="#" class="btn text-primary ml-2 border-primary md:border-2"
+          <a href="#" class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white"
             >Sign Up</a
           >
         </div>
@@ -112,7 +112,7 @@
 
           <div class="mt-8 grid lg:grid-cols-3 gap-10">
             <!--cards go here-->
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="./img/stew.jpg"
                 alt="stew"
@@ -141,7 +141,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="./img/noodles.jpg"
                 alt="noodles"
@@ -170,7 +170,7 @@
               </div>
             </div>
 
-            <div class="card">
+            <div class="card hover:shadow-lg">
               <img
                 src="./img/curry.jpg"
                 alt="curry"
@@ -208,7 +208,7 @@
           </div>
 
           <div class="flex justify-center">
-            <div class="bg-secondary-100 text-secondary-200 btn">Load More</div>
+            <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load More</div>
           </div>
         </div>
       </main>
