started working on making the navlinks well positioned

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body class="text-gray-600 font-body">
     <div class="grid md:grid-cols-3">
       <!--Page container-->
-      <div class="md:col-span-1">
+      <div class="md:col-span-1 md:flex md:justify-end">
         <!--navigation container-->
         <nav>
           <div>
