started working on making the navlinks well positioned

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <!--Page container-->
       <div class="md:col-span-1 md:flex md:justify-end">
         <!--navigation container-->
-        <nav>
+        <nav class="text-right">
           <div>
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -25,10 +25,10 @@
             </h1>
           </div>
 
-          <ul>
+          <ul class="text-sm mt-6">
             <!--nav link section-->
             <li class="text-gray-700 font-bold">
-              <a href="#">
+              <a href="#" class="px-4 flex justify-end">
                 <span class="">Home</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
