started working on making the navlinks well positioned

--- a/public/index.html
+++ b/public/index.html
@@ -47,11 +47,11 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="px-4 flex justify-end">
                 <span>About</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
+                  class="h-5 w-5 ml-2"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke="currentColor"
@@ -66,11 +66,11 @@
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="#" class="px-4 flex justify-end">
                 <span>Contact</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  class="h-5 w-5"
+                  class="h-5 w-5 ml-2"
                   fill="none"
                   viewBox="0 0 24 24"
                   stroke="currentColor"
