started working on making the navlinks well positioned

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
           <ul class="text-sm mt-6">
             <!--nav link section-->
-            <li class="text-gray-700 font-bold">
+            <li class="text-gray-700 font-bold py-2">
               <a href="#" class="px-4 flex justify-end">
                 <span class="">Home</span>
                 <svg
@@ -46,7 +46,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="py-2">
               <a href="#" class="px-4 flex justify-end">
                 <span>About</span>
                 <svg
@@ -65,7 +65,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="py-2">
               <a href="#" class="px-4 flex justify-end">
                 <span>Contact</span>
                 <svg
