--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
           <ul class="text-sm mt-6">
             <!--nav link section-->
             <li class="text-gray-700 font-bold py-2">
-              <a href="#" class="px-4 flex justify-end">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-primary">
                 <span class="">Home</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -47,7 +47,7 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="#" class="px-4 flex justify-end">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>About</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -66,7 +66,7 @@
               </a>
             </li>
             <li class="py-2">
-              <a href="#" class="px-4 flex justify-end">
+              <a href="#" class="px-4 flex justify-end border-r-4 border-white">
                 <span>Contact</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
