--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,31 @@
               <!--logo Text-->
               <a href="#" class="hover:text-gray-700">Food App</a>
             </h1>
+            <div class="px-4 cursor-pointer md:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+                strokeWidth="{2}"
+              >
+                <path
+                  strokeLinecap="round"
+                  strokeLinejoin="round"
+                  d="M4 6h16M4 12h16M4 18h16"
+                />
+              </svg>
+            </div>
           </div>
 
           <ul class="text-sm mt-6">
             <!--nav link section-->
             <li class="text-gray-700 font-bold py-2">
-              <a href="#" class="px-4 flex justify-end border-r-4 border-primary">
+              <a
+                href="#"
+                class="px-4 flex justify-end border-r-4 border-primary"
+              >
                 <span class="">Home</span>
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -92,10 +111,14 @@
       <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
           <!--Auth Buttons-->
-          <a href="#" class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white"
+          <a
+            href="#"
+            class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white"
             >Log In</a
           >
-          <a href="#" class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white"
+          <a
+            href="#"
+            class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white"
             >Sign Up</a
           >
         </div>
@@ -208,7 +231,11 @@
           </div>
 
           <div class="flex justify-center">
-            <div class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner">Load More</div>
+            <div
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner"
+            >
+              Load More
+            </div>
           </div>
         </div>
       </main>
