--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <div class="md:col-span-1 md:flex md:justify-end">
         <!--navigation container-->
         <nav class="text-right">
-          <div>
+          <div class="flex justify-between items-center">
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
@@ -41,7 +41,7 @@
             </div>
           </div>
 
-          <ul class="text-sm mt-6">
+          <ul class="text-sm mt-6 hidden md:block">
             <!--nav link section-->
             <li class="text-gray-700 font-bold py-2">
               <a
