--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <!--logo Text container-->
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
               <!--logo Text-->
-              <a href="#" class="hover:text-gray-700">Food Appp</a>
+              <a href="#" class="hover:text-gray-700">Food App</a>
             </h1>
             <div class="px-4 cursor-pointer md:hidden">
               <svg
