--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
               <!--logo Text-->
               <a href="#" class="hover:text-gray-700">Food App</a>
             </h1>
-            <div class="px-4 cursor-pointer md:hidden">
+            <div class="px-4 cursor-pointer md:hidden " id="burger">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 class="h-6 w-6"
@@ -41,7 +41,7 @@
             </div>
           </div>
 
-          <ul class="text-sm mt-6 hidden md:block">
+          <ul class="text-sm mt-6 hidden md:block" id="menu">
             <!--nav link section-->
             <li class="text-gray-700 font-bold py-2">
               <a
@@ -113,12 +113,12 @@
           <!--Auth Buttons-->
           <a
             href="#"
-            class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white"
+            class="btn text-primary border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Log In</a
           >
           <a
             href="#"
-            class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white"
+            class="btn text-primary ml-2 border-primary md:border-2 hover:bg-primary hover:text-white transition ease-out duration-500"
             >Sign Up</a
           >
         </div>
@@ -232,7 +232,7 @@
 
           <div class="flex justify-center">
             <div
-              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner"
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
             >
               Load More
             </div>
@@ -240,5 +240,6 @@
         </div>
       </main>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
