--- a/public/index.html
+++ b/public/index.html
@@ -234,6 +234,10 @@
             <div
               class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
             >
+
+             <div
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
+            >
               Load More
             </div>
           </div>
