--- a/public/index.html
+++ b/public/index.html
@@ -240,6 +240,9 @@
             >
               Load More
             </div>
+             <div
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
+            >
           </div>
         </div>
       </main>
