--- a/public/index.html
+++ b/public/index.html
@@ -244,6 +244,9 @@
               class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
             >
           </div>
+           <div
+              class="bg-secondary-100 text-secondary-200 btn hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300"
+            >
         </div>
       </main>
     </div>
