--- a/public/index.html
+++ b/public/index.html
@@ -219,6 +219,7 @@
                   />
                 </svg>
                 <span> 25 mins </span>
+                  <span> 25 mins </span>
               </div>
             </div>
           </div>
