--- a/public/index.html
+++ b/public/index.html
@@ -220,6 +220,7 @@
                 </svg>
                 <span> 25 mins </span>
                   <span> 25 mins </span>
+                    <span> 25 mins </span>
               </div>
             </div>
           </div>
