updating the code

--- a/public/index.html
+++ b/public/index.html
@@ -226,6 +226,9 @@
           <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
             Most Popular
           </h4>
+           <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
+            Most Popular
+          </h4>
           <div class="mt-8">
             <!--cards go here-->
           </div>
